--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     <script src="core/beer/beer.service.js"></script>
     <script src="core/shelfBeer/shelfBeer.module.js"></script>
     <script src="core/shelfBeer/shelfBeer.service.js"></script>
+    <script src="core/dataType/dataType.module.js"></script>
+    <script src="core/dataType/dataType.service.js"></script>
     <script src="main-header/main-header.module.js"></script>
     <script src="main-header/main-header.component.js"></script>
     <script src="login/login.module.js"></script>
