restructure some of the beer shelf services and implement deleting from shelf.

--- a/public/shelf/shelf.template.html
+++ b/public/shelf/shelf.template.html
@@ -40,6 +40,7 @@
           <td>{{shelfBeer.beer.abv}}</td>
           <td>{{shelfBeer.quantity}}</td>
           <td><i class="fa fa-pencil clickable" aria-hidden="true" ng-click="$ctrl.openEditBeer(shelfBeer)"></i></td>
+          <td><i class="fa fa-trash clickable" aria-hidden="true" ng-click="$ctrl.deleteBeer(shelfBeer)"></i></td>
         </tr>
       </table>
 
