Restructure the project pretty heavily and make use of webpack to inject all the js code.

--- a/public/index.html
+++ b/public/index.html
@@ -9,41 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="styles/beer-shelf.css" />
     <link rel="stylesheet" href="styles/signin.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
-    <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.4.0.js"></script>
-    <script src="app.module.js"></script>
-    <script src="app.config.js"></script>
-    <script src="core/core.module.js"></script>
-    <script src="core/user/user.module.js"></script>
-    <script src="core/user/user.service.js"></script>
-    <script src="core/auth/auth.module.js"></script>
-    <script src="core/auth/auth.service.js"></script>
-    <script src="core/brewery/brewery.module.js"></script>
-    <script src="core/brewery/brewery.service.js"></script>
-    <script src="core/beer/beer.module.js"></script>
-    <script src="core/beer/beer.service.js"></script>
-    <script src="core/shelfBeer/shelfBeer.module.js"></script>
-    <script src="core/shelfBeer/shelfBeer.service.js"></script>
-    <script src="core/dataType/dataType.module.js"></script>
-    <script src="core/dataType/dataType.service.js"></script>
-    <script src="main-header/main-header.module.js"></script>
-    <script src="main-header/main-header.component.js"></script>
-    <script src="login/login.module.js"></script>
-    <script src="login/login.component.js"></script>
-    <script src="account/account.module.js"></script>
-    <script src="account/account.component.js"></script>
-    <script src="shelf/shelf.module.js"></script>
-    <script src="shelf/shelf.component.js"></script>
-    <script src="reviews/reviews.module.js"></script>
-    <script src="reviews/reviews.component.js"></script>
-    <script src="user-list/user-list.module.js"></script>
-    <script src="user-list/user-list.component.js"></script>
-    <script src="settings/settings.module.js"></script>
-    <script src="settings/settings.component.js"></script>
-    <script src="modal-window/modal-window.module.js"></script>
-    <script src="modal-window/modal-window.component.js"></script>
+    <script src="bundle.js"></script>
   </head>
   <body>
       <div ng-view></div>
